# go-jsonnet-fork

./: MODULE.bazel  README.md  builtins.go  go.mod  interpreter.go  jsonnet_test.go  main_test.go  thunks.go  value.go  vm.go
.github/workflows/: install-go.sh  publish-python.yml  release.yml
c-bindings/: BUILD.bazel
cmd/dumpstdlibast/: BUILD.bazel
cmd/internal/cmd/: BUILD.bazel
cmd/jsonnet/: BUILD.bazel  cmd.go
cmd/jsonnet-deps/: BUILD.bazel
cmd/jsonnet-lint/: BUILD.bazel
cmd/jsonnetfmt/: BUILD.bazel
cmd/wasm/: BUILD.bazel
examples/bazel/: BUILD.bazel  MODULE.bazel  go.mod
formatter/: BUILD.bazel  formatter_test.go
formatter/testdata/: object_implicit_plus1.fmt.golden
internal/dump/: BUILD.bazel
internal/formatter/: BUILD.bazel  add_plus_object.go
internal/parser/: BUILD.bazel
internal/pass/: BUILD.bazel
internal/testutils/: BUILD.bazel
linter/: BUILD.bazel
linter/internal/common/: BUILD.bazel
linter/internal/traversal/: BUILD.bazel
linter/internal/types/: BUILD.bazel
linter/internal/variables/: BUILD.bazel
testdata/: assert_equal4.golden  assert_equal5.golden  assert_equal6.golden  bitwise_and3.golden  bitwise_and7.golden  bitwise_or9.golden  builtinManifestJsonEx.golden  builtinManifestJsonEx_cyclic.golden  builtinObjectRemoveKey_hidden.golden  builtin_manifestTomlEx_cyclic.golden  builtin_manifestYamlDoc.golden  builtin_manifestYamlDoc_cyclic.golden  comparisons.golden  dollar_end.golden  dollar_end2.golden  escaped_fields.golden  field_order.golden  field_order.jsonnet  field_order_preserve_field_order.golden  obj_local_right_level2.golden  obj_local_right_level3.golden  object_comp_super.golden  object_local_self_super.golden  object_super_within.golden  object_various_field_types.golden  percent_bad2.golden  percent_format_str4.golden  percent_format_str5.golden  percent_format_str6.golden  percent_format_str7.golden  stdlib_smoke_test.golden  super_index_desugar.golden  supersugar4.golden
testdata/cpp-tests-override/: multi4.golden.stderr  nonewline_yaml1.golden.stderr  string2.golden.stderr  yaml2.golden.stderr
testdata/multi.golden/: foo.json
testdata/multi_no_newline.golden/: foo.json
