load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dumpstdlibast_lib",
    srcs = ["dumpstdlibast.go"],
    importpath = "github.com/google/go-jsonnet/cmd/dumpstdlibast",
    visibility = ["//visibility:private"],
    deps = [
        "//ast",
        "//internal/dump",
        "//internal/program",
    ],
)

go_binary(
    name = "dumpstdlibast",
    embed = [":dumpstdlibast_lib"],
    visibility = ["//astgen:__subpackages__"],
)
