load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "jsonnetfmt_lib",
    srcs = ["cmd.go"],
    importpath = "github.com/google/go-jsonnet/cmd/jsonnetfmt",
    visibility = ["//visibility:private"],
    deps = [
        "//:go-jsonnet",
        "//cmd/internal/cmd",
        "//internal/formatter",
        "@com_github_fatih_color//:color",
    ],
)

go_binary(
    name = "jsonnetfmt",
    embed = [":jsonnetfmt_lib"],
    visibility = ["//visibility:public"],
)
