load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dump",
    srcs = [
        "dump.go",
        "pointermap.go",
        "utils.go",
    ],
    importpath = "github.com/google/go-jsonnet/internal/dump",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "dump_test",
    srcs = ["dump_test.go"],
    embed = [":dump"],
)
