load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = ["utils.go"],
    importpath = "github.com/google/go-jsonnet/cmd/internal/cmd",
    visibility = ["//cmd:__subpackages__"],
)

go_test(
    name = "cmd_test",
    srcs = ["utils_test.go"],
    embed = [":cmd"],
)
