load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "traversal",
    srcs = ["traversal.go"],
    importpath = "github.com/google/go-jsonnet/linter/internal/traversal",
    visibility = ["//linter:__subpackages__"],
    deps = [
        "//ast",
        "//internal/parser",
        "//linter/internal/common",
    ],
)
