load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "variables",
    srcs = ["find_variables.go"],
    importpath = "github.com/google/go-jsonnet/linter/internal/variables",
    visibility = ["//linter:__subpackages__"],
    deps = [
        "//ast",
        "//internal/parser",
        "//linter/internal/common",
    ],
)
